samples/_failures_safe/1761688711_7f1660_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cb77ed5.c: In function ‘main’:
./samples/SAFE/__tmp_4cb77ed5.c:146:5: error: expected expression at end of input
  146 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_4cb77ed5.c:146:5: error: expected declaration or statement at end of input
